--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,9 @@
         <junit.version>4.13.2</junit.version>
         <mockito.version>5.2.0</mockito.version>
         <buddy.version>1.14.2</buddy.version>
+        <commonsLang.version>3.12.0</commonsLang.version>
+        <mavenCompilerPlugin.version>3.8.1</mavenCompilerPlugin.version>
+        <jacoco.version>0.8.7</jacoco.version>
     </properties>
 
     <dependencies>
@@ -37,7 +40,7 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
-            <version>3.12.0</version>
+            <version>${commonsLang.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -48,7 +51,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
+                <version>${mavenCompilerPlugin.version}</version>
                 <configuration>
                     <source>11</source>
                     <target>11</target>
@@ -57,7 +60,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.7</version>
+                <version>${jacoco.version}</version>
                 <executions>
                     <execution>
                         <id>prepare-agent</id>
